[workspace]
resolver = "2"
members = [
    "crates/hyper_ast",
    "crates/hyper_diff",
    "lib/polyglote",
    "crates/tsquery",
    "gen/tree-sitter/*",
    "lib/egui_addon",
    "vcs/git",
    "crates/backend",
    "hyper_app",
    "benchmark_diffs",
    "benchmark_smells",
    "benchmark",
]
exclude = [
    "crates/ref-mining-evaluation",
    "hyperast_wasm",
]
default-members = [
    "crates/hyper_ast",
    "crates/hyper_diff",
    "gen/tree-sitter/java",
    "gen/tree-sitter/cpp",
    # "gen/tree-sitter/c",
    "gen/tree-sitter/xml",
    # "gen/tree-sitter/ts",
    "gen/tree-sitter/query",
    "vcs/git",
    "crates/backend",
    # "benchmark",
    # "hyperast_wasm",
    # "crates/ref-mining-evaluation",
    "benchmark_diffs",
    "lib/egui_addon",
    "lib/polyglote",
    "crates/tsquery",
    "benchmark_smells",
]

[workspace.dependencies]
tree-sitter-graph = { version = "0.12.0" }
tree-sitter = { version = "0.23.0" }
hyper_diff = { path = "./crates/hyper_diff" }
hyperast = { path = "./crates/hyper_ast" }
hyperast_tsquery = { path = "./crates/tsquery" }
hyperast_vcs_git = { path = "./vcs/git" }
polyglote = { path = "./lib/polyglote" }

hyperast_gen_ts_cpp = { path = "./gen/tree-sitter/cpp" }
hyperast_gen_ts_java = { path = "./gen/tree-sitter/java" }
hyperast_gen_ts_xml = { path = "./gen/tree-sitter/xml" }
hyperast_gen_ts_tsquery = { path = "./gen/tree-sitter/query" }
hyperast_gen_ts_ts = { path = "./gen/tree-sitter/ts" }

[patch.crates-io]
tree-sitter-graph = { git = "https://github.com/quentinLeDilavrec/tree-sitter-graph", rev = "bcdb8e5bbb16636f47d155c0bdae5d19fd46a888", version = "0.12" }
# tree-sitter-graph = { path = "../tree-sitter-graph", optional = true }
