[package]
name = "hyper_ast_benchmark"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tree-sitter = { workspace = true }
hyper_diff = { workspace = true }
hyper_ast_gen_ts_java = { workspace = true, features = ["impl"] }
hyper_ast_cvs_git = { workspace = true }
env_logger = "0.9.0"
log = { version = "0.4.6", features = [
    "max_level_debug",
    "release_max_level_warn",
] }

pommes = "0.0.2"


serde = { version = "1.0.130" }
serde-xml-rs = "0.5.1"


cfg-if = "1.0"

# TODO use it
criterion = "0.3.6"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = "0.5.0"

[build-dependencies]

# [profile.release]
# debug = 1

[[bin]]
name = "reserializing"
path = "src/reserializing.rs"

# [profile.release]
## release optimizations
# lto = "fat"
# codegen-units = 1
# rustflags = ["-C target-cpu=native"]
# panic = "abort"

[features]
impact = ["hyper_ast_gen_ts_java/impact"]