
[package]
name = "hyperast_benchmark_diffs"
version = "0.3.0"
edition = "2024"
autobins = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tree-sitter = { workspace = true }
hyperast = { workspace = true }
hyper_diff = { workspace = true }
hyperast_vcs_git = { workspace = true }
hyperast_gen_ts_java = { workspace = true }
hyperast_gen_ts_xml = { workspace = true }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.79"
env_logger = "0.11.3"
log = { version = "0.4.6", features = [
    "max_level_debug",
    "release_max_level_warn",
] }

cfg-if = "1.0"

num-traits = "0.2.14"
tuples = "=1.4.1"

rayon = "1.5.2"
hashbrown = { version = "0.13.1", features = ["rayon"] }
byteorder = "1.4.3"
bitvec = "1.0.1"
md5 = "0.7.0"

pprof = { version = "0.10", features = ["prost-codec", "flamegraph"] }

const-chunks = "0.3.0"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = { package = "tikv-jemallocator", version = "0.5.0" }

[target.'cfg(target_os = "linux")'.dev-dependencies]
hyperast_gen_ts_java = { workspace = true }
criterion = { version = "0.5.1", features = [
    "rayon",
    "plotters",
    "cargo_bench_support",
    "html_reports",
] }
criterion-perf-events = { version = "=0.4.0" }
perfcnt = "0.8.0"
chrono = { version = "0.4.41", features = ["serde"] }


[[bench]]
name = "midterm_benches"
harness = false

[[bench]]
name = "bottom_up_bench"
harness = false

[[bench]]
name = "simple_comparison"
harness = false

[[bench]]
name = "bench_final"
harness = false
