
[package]
name = "hyperast_benchmark_diffs"
version = "0.3.0"
edition = "2024"
autobins = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tree-sitter = { workspace = true }
hyperast = { workspace = true }
hyper_diff = { workspace = true }
hyperast_vcs_git = { workspace = true }
hyperast_gen_ts_java = { workspace = true }
hyperast_gen_ts_xml = { workspace = true }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.79"
env_logger = "0.11.3"
log = { version = "0.4.6", features = [
    "max_level_debug",
    "release_max_level_warn",
] }
git2 = { version = "0.19", features = ["vendored-libgit2", "vendored-openssl"] }

cfg-if = "1.0"

num-traits = "0.2.14"
tuples = "=1.4.1"

rayon = "1.5.2"
hashbrown = { version = "0.13.1", features = ["rayon"] }
byteorder = "1.4.3"
bitvec = "1.0.1"
md5 = "0.7.0"

pprof = { version = "0.10", features = ["prost-codec", "flamegraph"] }

const-chunks = "0.3.0"

winit = { version = "0.30.10", features = ["wayland-backend"] }
csv = "1.3.1"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = { package = "tikv-jemallocator", version = "0.5.0" }
jemalloc-ctl = { package = "tikv-jemalloc-ctl", version = "0.5.4" }

criterion = { version = "0.4", features = [
    "rayon",
    "plotters",
    "cargo_bench_support",
    "html_reports",
    # "real_blackbox",
] }

# [build-dependencies]

[dev-dependencies]
hyperast_gen_ts_java = { workspace = true }
iai-callgrind = "0.14.0"

[[bench]]
name = "gumtree_hybrid_basic"
harness = false

[[bench]]
name = "gumtree_comparison"
harness = false

[[bench]]
name = "gumtree_hybrid_hyperparameters"
harness = false

[[bench]]
name = "gumtree_hybrid_hyperparameter_minsize"
harness = false

[[bench]]
name = "iai_gumtree_comparison"
harness = false

[[bench]]
name = "gumtree_repo_comparison"
harness = false

[[bench]]
name = "gumtree_repo_hyperparameter_maxsize"
harness = false
