[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tree-sitter = "0.20.9"
tree-sitter-cli = "0.20.7"
hyper_ast = { path = "../hyper_ast", default-features = false, features = ["serialize"] }
hyper_diff = { path = "../hyper_diff" }
hyper_ast_cvs_git = { path = "../cvs/git" }
hyper_ast_gen_ts_java = { path = "../gen/tree-sitter/java" }
env_logger = "0.9.0"
log = { version = "0.4.6", features = [
    # "max_level_debug",
    # "release_max_level_warn",
] }

rhai = { version = "1.12.0", features = ["sync", "serde"] }
average = "0.13.1"

axum = { version="0.6.7", features = ["ws","headers"] } # Web framework that focuses on ergonomics and modularity.
hyper = { version = "0.14.17", features = [
    "full",
] } # A fast and correct HTTP library.
tokio = { version = "1.17.0", features = [
    "full",
] } # Event-driven, non-blocking I/O platform.
tower = { version = "0.4.12", features = [
    "full",
] } # Modular reusable components for building robust clients and servers.
serde = { version = "1.0.136", features = [
    "derive",
] } # A serialization/deserialization framework.

# try crdt with ws https://github.com/tokio-rs/axum/blob/main/examples/websockets/Cargo.toml
futures = "0.3"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
headers = "0.3"

serde_json = "1.0.79" # Serde serializion/deserialization of JSON data.
once_cell = "1.10.0" # Single assignment cells and lazy values.
base64 = "0.13" # Encode and decode base64 as bytes or utf8.
http = "0.2.6" # Types for HTTP requests and responses.
tracing = "0.1.32" #  Application-level tracing for Rust.
tracing-subscriber = { version = "0.3.9", features = [
    "env-filter",
] } # Utilities for implementing and composing `tracing` subscribers.
axum-extra = { version = "0.7.4", features = [] } # fallbacks for access levels, use typed-routing feature if needed

tower-http = { version = "0.3.0", features = [
    "add-extension",
    "auth",
    "compression-full",
    "limit",
    "trace",
    "fs",
    "cors",
] }
tower-layer = "0.3.2"
axum-macros = "0.3.4"

self_cell = "0.10.2"
nohash-hasher = "0.2.0"

serde-aux = "4.1.2"

dashmap = { version = "5.4.0", features = ["raw-api"] }

enumset = "1.0.12"
num = "0.4.0"

autosurgeon = "0.7.1"
automerge = { version = "0.4.0" }
# used to add extra-traits flag needed by code in autosurgeon-derive
syn = { version = "2", features = ["full", "extra-traits"] }

clap = { version = "3.0", features = ["derive"] }

[dependencies.hashbrown]
version = "0.12.3"

[dev-dependencies]
reqwest = { version = "0.11", features = ["blocking"] }

[profile.release]
debug = 1
