[package]
name = "client"
version = "0.2.0"
edition = "2021"

[dependencies]
tree-sitter = "0.23.0"
tree-sitter-cli = "0.23.0"
hyper_ast = { path = "../hyper_ast", default-features = false, features = [
    "serialize",
] }
hyper_diff = { path = "../hyper_diff" }
hyper_ast_cvs_git = { path = "../cvs/git" }
hyper_ast_gen_ts_java = { path = "../gen/tree-sitter/java" }
hyper_ast_gen_ts_cpp = { path = "../gen/tree-sitter/cpp" }
hyper_ast_gen_ts_tsquery = { path = "../gen/tree-sitter/query" }
hyper_ast_tsquery = { path = "../tsquery" }
polyglote = { path = "../polyglote", optional = true }

# env_logger = "0.9.0"
log = { version = "0.4.6" }

## scripting

rhai = { version = "1.12.0", features = ["sync", "serde"] }
average = "0.13.1"

## http server
axum = { version = "=0.7.4", features = [
    "ws",
] } # Web framework that focuses on ergonomics and modularity.
hyper = { version = "1.4.1", features = [
    "full",
] } # A fast and correct HTTP library.
tokio = { version = "1.17.0", features = [
    "full",
] } # Event-driven, non-blocking I/O platform.
tower = { version = "0.5.0", features = [
    "full",
] } # Modular reusable components for building robust clients and servers.
serde = { version = "1.0.136", features = [
    "derive",
] } # A serialization/deserialization framework.

# try crdt with ws https://github.com/tokio-rs/axum/blob/main/examples/websockets/Cargo.toml
futures = "0.3"
futures-util = { version = "0.3", default-features = false, features = [
    "sink",
    "std",
] }
headers = "0.4.0"

serde_json = "1.0.79" # Serde serializion/deserialization of JSON data.
once_cell = "1.10.0" # Single assignment cells and lazy values.
base64 = "0.13" # Encode and decode base64 as bytes or utf8.
http = "1.1.0" # Types for HTTP requests and responses.
tracing = "0.1.32" #  Application-level tracing for Rust.
tracing-subscriber = { version = "0.3.9", features = [
    "env-filter",
] } # Utilities for implementing and composing `tracing` subscribers.
axum-extra = { version = "=0.9.2", features = [
    "typed-header",
] } # fallbacks for access levels, use typed-routing feature if needed

tower-http = { version = "0.5.2", features = [
    "add-extension",
    "auth",
    "compression-full",
    "limit",
    "trace",
    "fs",
    "cors",
] }
tower-layer = "0.3.3"
axum-macros = "0.4.1"

nohash-hasher = "0.2.0"

serde-aux = "4.1.2"

dashmap = { version = "5.4.0", features = ["raw-api"] }

enumset = "1.0.12"
num = "0.4.0"

# sharing feature
autosurgeon = "0.7.1"
automerge = { version = "0.4.0" }
# used to add extra-traits flag needed by code in autosurgeon-derive
syn = { version = "2", features = ["full", "extra-traits"] }

clap = { version = "3.0", features = ["derive"] }

hashbrown = "0.14.5"

# tree-sitter-graph = { path = "../../tree-sitter-graph", optional = true }
tree-sitter-graph = { git = "https://github.com/quentinLeDilavrec/tree-sitter-graph", rev = "080387760a41cb31e0350e91e44bb27253dc94ef", version = "0.12", optional = true }
# tree-sitter-stack-graphs = { git = "https://github.com/quentinLeDilavrec/stack-graphs", rev = "d0fa507d4b3892b1db60938f37bf4779f9dae18d", optional = true }
# stack-graphs = { git = "https://github.com/quentinLeDilavrec/stack-graphs", rev = "d0fa507d4b3892b1db60938f37bf4779f9dae18d", optional = true }
# tree-sitter-graph = { version = "0.11.3", optional = true }
# tree-sitter-stack-graphs = { version = "0.9.0", optional = true }
# stack-graphs = { version = "0.14.0", optional = true }

rerun = { version = "0.20.2", default-features = false, features = [
    "log",
    "sdk",
], optional = true }


graphql_client = { version = "0.14.0" }
hyper-rustls = "0.27.2"
hyper-util = { version = "0.1", default-features = false, features = [
    "client-legacy",
    "tokio",
] }
rustls = { version = "0.23" }
http-body-util = "0.1.2"
[dev-dependencies]
reqwest = { version = "0.12.5", features = ["blocking"] }


[features]
default = ["rerun", "tsg"]
tsg = [
    "dep:tree-sitter-graph",
    # "dep:stack-graphs",
    # "dep:tree-sitter-stack-graphs",
    "hyper_ast_tsquery/tsg"
]
rerun = ["dep:rerun", "dep:polyglote"]
