[package]
name = "rusted_gumtree_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
specs = "0.17.0"
strum = "0.23.0"
strum_macros = "0.23.1"
hungarian = "1.1.1"
num-traits = "0.2.14"
enum-map="1.1.1"
bitvec = "0.22.3"
str-distance = "0.1.0"