[package]
name = "egui_addon"
version = "0.1.0"
edition = "2021"
rust-version = "1.65"

[dependencies]
egui = "0.21.0"
eframe = { version = "0.21.0", default-features = false, features = [
    # "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    # "persistence",   # Enable restoring app state when restarting the app.
] }
epaint = "0.21.0"
egui_demo_lib = { version = "0.21.0", features = ["syntect"] }
egui_extras = "0.21.0"

# You only need serde if you want app persistence:
serde = { version = "1", optional = true, features = ["derive"] }

enum-map = { version = "2", features = ["serde"] }
log = { version = "0.4.6" }

lazy_static = "1.4.0"

wasm-rs-dbg = "0.1.2"

egui_cable = "0.5.0"

enumset = "1.0.12"

crossbeam-queue = "0.3.8"

[dependencies.syntect]
version = "5"
features = ["default-fancy"]
default-features = false

# TODO put it behind a feature
autosurgeon = "0.7.1"
automerge = { version = "0.4.0" }
# used to add extra-traits flag needed by code in autosurgeon-derive
syn = { version = "2", features = ["full", "extra-traits"] }

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
poll-promise = { version = "0.2", default-features = false }
# tracing-subscriber = "0.3"
tree-sitter-javascript = "0.20.0"
tree-sitter = { version = "0.9.1", package = "tree-sitter-facade-sg" }
tree-sitter-highlight = "0.20.1"
# tree-sitter-native = { version = "0.20.9", package = "tree-sitter" }

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-timers = "0.2.6"
poll-promise = { version = "0.2", default-features = false, features = ["web"] }
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"
tree-sitter = { version = "0.9.1", package = "tree-sitter-facade-sg" }
web-tree-sitter-sg = "1.3"
wasm-bindgen = { version = "0.2.84", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.34"
serde-wasm-bindgen = "0.4"
js-sys = "0.3"
# wasm-bindgen-futures = "0.4"


[features]
default = ["serde"]

# Allow serialization using [`serde`](https://docs.rs/serde).
serde = ["egui/serde", "dep:serde"]