[package]
name = "egui_addon"
version = "0.1.0"
edition = "2021"
rust-version = "1.65"

[dependencies]
egui = { version = "0.28.1", default-features = false }
eframe = { version = "0.28.1", default-features = false }
epaint = { version = "0.28.1", default-features = false }
emath = { version = "0.28.1", default-features = false }
egui_demo_lib = { version = "0.28.1", default-features = false, features = ["syntect"] }
egui_extras = { version = "0.28.1", default-features = false }

# You only need serde if you want app persistence:
serde = { version = "1", optional = true, features = ["derive"] }

enum-map = { version = "2", features = ["serde"] }
log = { version = "0.4.6" }

lazy_static = "1.4.0"

wasm-rs-dbg = "0.1.2"

enumset = "1.0.12"

crossbeam-queue = "0.3.8"

syntect = { version = "5", features = [
    "default-fancy",
], default-features = false }

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
poll-promise = { version = "0.3", default-features = false }
# tracing-subscriber = "0.3"
tree-sitter-javascript = "0.20.0"
tree-sitter = { version = "0.9.1", package = "tree-sitter-facade-sg" }
tree-sitter-highlight = "0.20.1"
# tree-sitter-native = { version = "0.20.9", package = "tree-sitter" }

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-timers = "0.2.6"
poll-promise = { version = "0.3", default-features = false, features = ["web"] }
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"
tree-sitter = { version = "0.9.1", package = "tree-sitter-facade-sg" }
web-tree-sitter-sg = "1.3"
wasm-bindgen = { version = "0.2.84" }
wasm-bindgen-futures = "0.4.34"
serde-wasm-bindgen = "0.4"
js-sys = "0.3"
# wasm-bindgen-futures = "0.4"


[features]
default = ["serde"]

# Allow serialization using [`serde`](https://docs.rs/serde).
serde = ["egui/serde", "dep:serde"]
