[package]
name = "hyper_gumtree"
version = "0.1.0"
edition = "2021"
autobenches = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
specs = "0.17.0"
strum = "0.23.0"
strum_macros = "0.23.1"
hungarian = "1.1.1"
num-traits = "0.2.14"
enum-map="2.4.1"
bitvec = "0.22.3"
str-distance = "0.1.0"
env_logger = "0.9.0"
log = { version = "0.4.6", features = ["max_level_trace", "release_max_level_warn"] }
hyper_ast = { path = "../hyper_ast" }

logging_timer = "1.1.0"

[dev-dependencies]
criterion = { version = "0.4", features = ["rayon", "plotters", "cargo_bench_support", "html_reports", "real_blackbox"] }

[lib]
bench = false

[[bench]]
name = "compressed_path_iter"
harness = false

[profile.test]
opt-level = 3