[package]
name = "hyper_ast"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# atomic-counter = "1.0.1"
num = "0.4.0"
cfg-if = "1.0"
hashbrown = { version = "0.13.2", default-features = false, optional = true }
# fasthash="0.4.0"

# hyper_ast_core = { path = "../../../core" }
# tree-sitter_types = { path = "../../../tree-sitter_types" }

#  # logging
log = { version = "0.4.6" } #, features = ["max_level_debug", "release_max_level_warn"] }


# # promizing to store subtrees efficiently
# zerocopy="0.6.1"

# tuples = "=1.4.1"

# enumset = "1.0.8"

## store
legion = { version = "0.4.0", features = [
    "extended-tuple-impls",
], optional = true }
bitvec = "1.0.1"
controlled-option = "0.4.1" # check if really needed
string-interner = { version = "0.14.0", optional = true }

# # memusage
libc = "0.2"

# # types
strum = "0.23.0"
strum_macros = "0.23.1"
lazy_static = "1.4.0"

# # handle: use the handle of their arena implementation
# stack-graphs = "=0.3.0"

getrandom = { version = "0.2.8" }
indexmap = "=1.6.2"

hecs = { version = "0.9.1", features = [], optional = true }

[dev-dependencies]
env_logger = "0.9.0"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = { version = "0.5.0", optional = true }
jemalloc-ctl = { version = "0.5.0", optional = true }

[dependencies.serde]
version = "1"
features = ["derive"]
optional = true

[features]
default = ["jemalloc", "legion", "hecs", "native"]
legion = ["dep:legion"]
hecs = ["dep:hecs"]
web = ["getrandom/js", "dep:string-interner", "dep:hashbrown"]
native = ["dep:string-interner", "dep:hashbrown", "hashbrown?/ahash"]
jemalloc = ["jemallocator", "jemalloc-ctl"]
serialize = ["serde"]

# wasm = ["legion/wasm-bindgen"] # issue due to dependency cycle
